Fixed wrapping

--- a/web/persistent-selves/src/styles/pages/registry.scss
+++ b/web/persistent-selves/src/styles/pages/registry.scss
@@ -640,6 +640,7 @@
 
             .title {
                 text-transform: capitalize;
+                white-space: normal;
             }
 
             .placeholder {
